# mdclaw

./: .dockerignore  .gitignore  .mcp.json  AGENTS.md  BIOEMU_INTEGRATION_PLAN.md  CLAUDE.md  CONTEXT.md  README.md  colab.ipynb  environment.yml  eval_plan.md  main.py  package.json  plugin-manifest.json  pyproject.toml  run-bench-parallel.sh  run_mdprepbench_bench.sh  run_mdprepbench_conditions.sh
.agents/skills/: bioemu-sample  common  md-equilibration  md-prepare  md-study
.claude-plugin/: marketplace.json  plugin.json
.claude/commands/: hpc-run.md  md-analyze.md  md-benchmark.md  md-equilibration.md  md-prepare.md  md-production.md  md-run.md
.claude/skills/: boltz-predict  hpc-run  md-analyze  md-benchmark  md-production  modeller-predict
20220403_unbound/: ._20220403_0801295_summary.tsv  20220403_0801295_summary.tsv
batch_2_4m3j_A/evidence/: mdclaw_methods_batch_2_4m3j_A_prod_001.md
benchmarks/: README.md
benchmarks/baselines/: README.md  empty_submission.py  json_only_no_run.py  naive_pdbfixer_prep.py  study_literature_guess_no_md.py
benchmarks/mdagentbench/: dataset.json
benchmarks/mdagentbench_lite_v0_1/: dataset.json
benchmarks/mdprepbench/: dataset.json
benchmarks/mdstudybench/: dataset.json
benchmarks/tools/: audit_mdprepbench_run.py  package_submission.py  run_mdprepbench_all_agents.py  run_mdstudybench_all_agents.py  validate_submission.py
common/: __init__.py  utils.py
container/: Dockerfile
container/scripts/: entrypoint.sh  test-container.sh
docs/: auto_answer_testing.md  literature_server_plan.md
docs/adr/: 0001-topology-contract-is-openmm-xml-triple.md  0002-equilibration-node-is-one-stage.md  0003-cross-topology-analysis-requires-explicit-mapping.md
docs/agents/: deployment.md
docs/benchmark/: README.md  capability-coverage.md  evaluation-workflow.md  external-agents.md  fairness-protocol.md  integrity-rollout.md  mdcrow-runner.md  mdstudybench.md  openrouter-harness-matrix.md  suite_design.md  vnext_task_design.md
docs/developer/: analysis-node-contract.md  architecture.md  bioemu-integration-plan.md  cli-internals.md  configuration.md  container.md  deploy-simplification-plan.md  model-backends.md  release.md  roadmap-and-known-issues.md  skill-conventions.md  testing.md  tool-reference.md
docs/research/: agent_orchestrated_md.md  ligand_robustness_audit.md  md_surrogate_integration.md  mdagentbench_v1_design.md  mdclaw_citation_inventory.md  mdclaw_claw_family_integration.md  mdclaw_scienceclaw_integration_plan.md  openmmforcefields_unification_slow_suite_resolution.md  prep_workflow_flowchart.md
examples/benchmark/: external_agent_submission.py  fake_submissions.py  harness_matrix.openrouter.json  (+2 more)
hooks/: hooks.json
mdclaw/: __init__.py  _cli.py  _common.py  _event.py  _geostd.py  _ligand_xml.py  _lock.py  _node.py  _progress.py  _registry.py  _tool_meta.py  _topology_pablo.py  amber_server.py  analyze_server.py  benchmark_schema.py  benchmark_server.py  chemistry_constants.py  evidence_schema.py  evidence_server.py  forcefield_catalog.py  forcefield_templates.py  genesis_server.py  guardrail_codes.py  md_simulation_server.py  membrane_cache.py  metal_server.py  node_server.py  openmm_system_server.py  research_server.py  selection_utils.py  sidechain_packer.py  slurm_server.py  solvation_server.py  source_bundle.py  structure_server.py  study_server.py  surrogate_server.py  throughput_server.py  visualization_server.py
mdprepbench_work/: HANDOFF_gpt55.md  driver.py
scripts/: bump-version.sh  gen_cli_contract.py  gen_guardrail_codes.py  gen_guardrail_codes_md.py  generate_prep_benchmark_tasks.py  install-agent-skills.sh  mdclaw-doctor.sh  reindex_membrane_cache.py  setup-container.sh  warmup_membrane_cache.py
servers/: __init__.py  _cli.py  _common.py  _mcp_main.py  _registry.py  amber_server.py  genesis_server.py  literature_server.py  md_simulation_server.py  metal_server.py  research_server.py  slurm_server.py  solvation_server.py  structure_server.py
slide/: build_progress_slides.py
tests/: __init__.py  conftest.py  manual_checklist.md  pipeline_helpers.py  test_additive_ligand_triage.py  test_amber_disulfide.py  test_analyze_server.py  test_ap5_build_topology_smoke.py  test_benchmark_server.py  test_chain_identity_map.py  test_chain_selection.py  test_charge_fit_timeout.py  test_clean_protein_caps.py  test_cli.py  test_cli_contract.py  test_common.py  test_custom_forces.py  test_cyx_hg_strip.py  test_deployment_scripts.py  test_error_contract.py  test_event.py  test_evidence_server.py  test_failure_trace.py  test_fetch_validation.py  test_forcefield_catalog.py  test_forcefield_templates.py  test_genesis_server.py  test_glycoprotein_support.py  test_guardrail_code_registry.py  test_guardrails.py  test_input_resolution_recovery.py  test_integration.py  test_ligand_pathway.py  test_ligand_protonation.py  test_lipid21_external_matching.py  test_lipid21_xml_selection.py  test_literature_server.py  test_mcp_server.py  test_md_helpers.py  test_mdprep_raw_submission_export.py  (+41 more)
(+715 files in other folders)
