[project]
name = "mdclaw"
version = "0.5.2"
description = "MDClaw - skills and CLIs for vibe-MD simulations and autonomous scientific investigation"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    # Structure preparation
    # Note: openmm, pdbfixer, rdkit, ambertools, and pymol-open-source are
    # conda-only / conda-preferred runtime dependencies.
    # See environment.yml for full setup.
    "pdb2pqr>=3.1.0",
    "propka>=3.5.0",
    "gemmi>=0.6.0",
    "dimorphite-dl>=1.3.2",
    "pubchempy>=1.0.4",
    "e3nn==0.5.0",
    "hpacker @ git+https://github.com/gvisani/hpacker.git",

    # Topology manipulation
    "parmed>=4.3.0",

    # Data models & validation
    "pydantic>=2.4",

    # HTTP & networking
    "httpx>=0.28.1",
    "requests>=2.31.0",

    # Utilities
    "python-dotenv>=1.0.0",
    "pyyaml>=6.0",

    # Visualization & analysis
    "mdtraj>=1.9.0",
    "matplotlib",
    "pymbar>=4.0.3,<5",

    # Numerical
    "numpy>=1.24.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "ruff>=0.1.0",
]

[project.scripts]
mdclaw = "mdclaw._cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["mdclaw"]

[tool.pytest.ini_options]
markers = [
    "slow: tests requiring conda scientific packages (deselect with '-m not slow')",
    "integration: full pipeline tests (deselect with '-m not integration')",
]
asyncio_mode = "auto"

[tool.ruff]
line-length = 100
target-version = "py312"
